[gd_scene load_steps=2 format=3 uid="uid://l61c0vvrej7t"]

[ext_resource type="Script" uid="uid://cdy0eqmmkggvt" path="res://scenes/game_over_menu.gd" id="1_6ebp1"]

[node name="GameOverMenu" type="Node2D"]
script = ExtResource("1_6ebp1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="filler1" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="filler1" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "X_X"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="filler2" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="filler2" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
